--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,11 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>马来西亚的Covid-19新病例创单日新高</h3>
+<p>据大马官方的Bernama 通讯社报导，马来西亚周日录得有871例新的感染Covid-19病毒的病例。这是该国疫情爆发以来录得的单日最高的病例数。</p>
+<p>根据约翰-霍普金斯大学的数据，马来西亚迄今已录得20,498例感染Covid-19的病例和187人死亡。</p>
+<p>据Bernama 通讯社报导，马来西亚卫生总局局长努尔·希瑟姆（Noor Hisham）说，大多数病例都是在婆罗洲东北部的沙巴州录得的。</p>
+<p>上周二，马来西亚部分地区，包括沙巴州和首都吉隆坡，被置于有条件行动管制令之下，该令禁止婚礼和体育赛事等活动。此外，还禁止出于非工作目的的跨地区旅行。</p>
 <h3>印度新增55,722例确诊</h3>
 <p>据印度卫生部周一报告数据，在过去24小时内，印度增加了55,722例感染中共病毒的病例，令总的感染人数升至755万人。</p>
 <p>不过，印度周一录得近四个月来的最低死亡人数，在过去24小时内报告的死亡人数为579人，使全国总的死亡人数达到114,610 人。</p>
@@ -136,7 +141,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10085548.md#1" target="_blank">郑兢业：人吃与吃人（一 ）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/4/n11163148.md#1" target="_blank">医生见证人病人重生的神奇</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/9/n9940966.md#1" target="_blank">高天韵：《共产主义的终极目的》是救世神书</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11368594.md#1" target="_blank">二度死里逃生 前大陆白领熬过酷刑迎来自由</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
