--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475279.md#1" target="_blank">儿子长出新脾脏 医生惊呼不可能</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/7/n10035147.md#1" target="_blank">林辉：雍和宫躲过文革有因 毁佛像者下场惨</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/2/n11229916.md#1" target="_blank">制止强摘人体器官 全球立法行动知多少</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
