--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/29/n11223087.md#1" target="_blank">【征文】杨宁：中华文物之殇史无前例</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2443847.md#1" target="_blank">《中共弄巧成拙》(1):天安门自焚伪案</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/11/7/n3077476.md#1" target="_blank">【史实】卡尔·马克思的成魔之路</a></li><li><a href="https://github.com/nsxsof363/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/21/n11602447.md#1" target="_blank">他们为我们的生活带来光明（4）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
